; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_common.c_ZSTD_calloc.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/zstd/extr_zstd_common.c_ZSTD_calloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* (i32, i64)*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ZSTD_calloc(i64 %0, i8* (i32, i64)* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = bitcast %struct.TYPE_3__* %4 to { i8* (i32, i64)*, i32 }*
  %8 = getelementptr inbounds { i8* (i32, i64)*, i32 }, { i8* (i32, i64)*, i32 }* %7, i32 0, i32 0
  store i8* (i32, i64)* %1, i8* (i32, i64)** %8, align 8
  %9 = getelementptr inbounds { i8* (i32, i64)*, i32 }, { i8* (i32, i64)*, i32 }* %7, i32 0, i32 1
  store i32 %2, i32* %9, align 8
  store i64 %0, i64* %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %11 = load i8* (i32, i64)*, i8* (i32, i64)** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i8* %11(i32 %13, i64 %14)
  store i8* %15, i8** %6, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @memset(i8* %16, i32 0, i64 %17)
  %19 = load i8*, i8** %6, align 8
  ret i8* %19
}

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
